--- a/src/Avalonia.MusicStore/Avalonia.MusicStore.csproj
+++ b/src/Avalonia.MusicStore/Avalonia.MusicStore.csproj
@@ -9,8 +9,14 @@
   </PropertyGroup>
   <ItemGroup>
     <AvaloniaResource Include="Assets\**" />
+    <AvaloniaResource Remove="Assets\Fonts\MSYH.TTC" />
+    <AvaloniaResource Remove="Assets\Fonts\SIMSUN.TTC" />
     <None Remove=".gitignore" />
     <None Remove="Assets\logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Assets\Fonts\MSYH.TTC" />
+    <EmbeddedResource Include="Assets\Fonts\SIMSUN.TTC" />
   </ItemGroup>
   <ItemGroup>
     <!--This helps with theme dll-s trimming.
